# array_ref

./: .travis.yml  ISSUES.rst  Makefile  P00009.rst  P0009.rst  README.md  array_ref  deploy.sh  deploy_key.enc  multi_array_ref  space.hpp  span.hpp  test_array_ref_basics.cpp  test_build_dynamic_dims_tuple.cpp  test_build_extents_tuple.cpp  test_column_major_layout_basic.cpp  test_column_major_layout_no_padding_no_stride.cpp  test_column_major_layout_striding.cpp  test_column_major_padded_layout.cpp  test_count_dynamic_dims.cpp  test_count_dynamic_extents.cpp  test_dims.cpp  test_dims_get_value.cpp  test_dynamic_dim_tuple_index.cpp  test_dynamic_extent_tuple_index.cpp  test_extents_get_value.cpp  test_pack_is_integral.cpp  versus_array_view.rst
.deploy/: deploy.sh  deploy_key.enc  deploy_key.pub
clang_patch/: allow_relaxed_array_types.patch
code/: p0332_tests.cc
compiler_patches/: p0332_patch_clang_8d1304_llvm_c54ecd_github.patch
include/: array_ref
notes/: CHANGES  IDEAS.rst  INDEXING.rst  ISSUES.rst  ISSUES2.rst  SPAN.rst  TODO  TODO.rst  eric_dimensions_example.cpp  jacksonville_minutes.rst  notes  notes2  versus_array_view.rst
proposals/: P0009.html  P0009.rst  P0331.html  P0331.rst  P0332.bs  P0332.html  P0332.rst  P0454r0.bs  P0454r0.html  P0546.html  P0546.rst  P0856.bs  P0856.cpp  P0856.html  P0856.rst  P0860.html  P0860.rst  P0900.bs  P0900.html
reference/: CMakeLists.txt
reference/include/: array_ref  mdspan
reference/include/boost/: current_function.hpp
reference/include/boost/core/: lightweight_test.hpp
reference/include/detail/: accessor_native.hpp  dimensions.hpp  dimensions_reductions.hpp  fwd.hpp  integer_sequence.hpp  layout_left.hpp  layout_mapping_left.hpp  layout_mapping_right.hpp  layout_regular_indexer.hpp  layout_right.hpp  mdspan_helper  meta.hpp  meta_logical_operators.hpp
reference/include/impl/: basic_layout_left.hpp  basic_layout_right.hpp  conjunction.hpp  dimensions.hpp  dimensions_reductions.hpp  fwd.hpp  layout_left.hpp  layout_mapping_left.hpp  layout_mapping_right.hpp  layout_right.hpp  meta.hpp  meta_logical_operators.hpp
reference/test/: test_array_ref_basics.cpp  test_basic_layout_left.cpp  test_basic_layout_left_padding.cpp  test_basic_layout_left_striding.cpp  test_basic_layout_left_striding_padding.cpp  test_basic_layout_right.cpp  test_basic_layout_right_padding.cpp  test_basic_layout_right_striding.cpp  test_basic_layout_right_striding_padding.cpp  test_dims_dynamic_extent.cpp  test_dims_meta_interfaces.cpp  test_layout.cpp  test_layout_mapping_left_basics.cpp  test_layout_mapping_left_padding.cpp  test_layout_mapping_left_striding.cpp  test_layout_mapping_left_striding_padding.cpp  test_layout_mapping_right_basics.cpp  test_layout_mapping_right_padding.cpp  test_layout_mapping_right_striding.cpp  test_layout_mapping_right_striding_padding.cpp  test_mdspan.cpp  test_meta_count_dynamic_dims.cpp  test_meta_count_integral_range_slice_specifiers.cpp  test_meta_extract_dimensions.cpp  test_meta_is_slice_specifier.cpp  test_meta_make_dynamic_dims_array.cpp  test_meta_pack_is_integral.cpp  test_meta_slice_specifier.cpp
reference/tests/: test_array_ref_basics.cpp  test_dims_dynamic_extent.cpp  test_dims_filter_initialize_dynamic_dims_array.cpp  test_dims_index_into_dynamic_dims.cpp  test_dims_meta_interfaces.cpp  test_dims_rt_interfaces.cpp  test_integer_sequence.cpp  test_layout_mapping_left_basics.cpp  test_layout_mapping_left_padding.cpp  test_layout_mapping_left_stepping.cpp  test_layout_mapping_left_stepping_padding.cpp  test_layout_mapping_regular_precomputed_strides_basics.cpp  test_layout_mapping_regular_precomputed_strides_left_basics.cpp  test_layout_mapping_right_basics.cpp  test_layout_mapping_right_padding.cpp  test_layout_mapping_right_stepping.cpp  test_layout_mapping_right_stepping_padding.cpp  test_layout_regular_indexer_basics.cpp  test_layout_regular_indexer_left_basics.cpp  test_meta_count_dynamic_dims.cpp  test_meta_count_integral_range_slice_specifiers.cpp  test_meta_extract_dimensions.cpp  test_meta_is_slice_specifier.cpp  test_meta_make_dynamic_dims_array.cpp  test_meta_make_dynamic_dims_indices.cpp  test_meta_make_filled_dims.cpp  test_meta_pack_is_integral.cpp  test_meta_push_front_and_push_back.cpp  test_meta_type_list.cpp
reference_K/: README.txt
reference_old/: CMakeLists.txt
reference_old/include/detail/: fwd.hpp  integer_sequence.hpp  layout_mapping_regular_base.hpp  layout_mapping_regular_precomputed_strides.hpp  layout_right.hpp
reference_old/tests/: test_dims_index_into_dynamic_dims.cpp  test_dims_runtime_interfaces.cpp  test_layout_mapping_left_basics.cpp  test_layout_mapping_left_stepping.cpp  test_layout_mapping_right_basics.cpp  test_meta_count_dynamic_dims.cpp  test_meta_count_integral_range_slice_specifiers.cpp  test_meta_extract_dimensions.cpp  test_meta_is_integral_pack.cpp  test_meta_make_filled_dims.cpp
src/: P0009.rst  layouts.hpp  test_view.cpp  (+1 more)
(+33 files in other folders)
